--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,12 @@ venv
 .vscode
 real_rm_files
 pdfs
+# Devenv
+.devenv*
+devenv.local.nix
+
+# direnv
+.direnv
+
+# pre-commit
+.pre-commit-config.yaml
